update Login and register, now it is possible to click at privacy... and legal.... update responsiv booard now there should no longer be a horizontal scrollbar

--- a/assets/style/board/board.css
+++ b/assets/style/board/board.css
@@ -82,7 +82,7 @@
 }
 
 .input-find-Task>input {
-    font-size: 20px;
+    font-size: 16px;
     border: #FFFFFF;
     height: 48px;
     width: 366px;
