--- a/assets/style/main/main.css
+++ b/assets/style/main/main.css
@@ -93,6 +93,7 @@ header {
     display: flex;
     gap: 8px;
     align-items: center;
+    justify-content: center;
     color: #a3a7ab;
     height: 46px;
     transition: transform 0.2s;
@@ -104,7 +105,7 @@ header {
 }
 
 .sidebar-legal-stuff-links {
-    padding-left: 56px;
+    /* padding-left: 56px; */
 }
 
 .sidebar-links img {
