--- a/assets/style/register.css
+++ b/assets/style/register.css
@@ -1,10 +1,22 @@
 body{
-    max-width: 1920px;
+   display: flex;
+   justify-content: center;
 }
-
+.main-position{
+    width: 100%;
+    height: 100%;
+    max-width: 1940px;
+}
 .register-content {
     max-width: 598px;
     height: 630px;
+}
+main{
+    display: flex;
+    justify-content: center;
+}
+.login{
+    width: 598px;
 }
 
 .go-to-start {
